# QRM-Delta-Factory

./: .env.example  .gitignore  README.md  docker-compose.hetzner.yml  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  prompt_templates.py
backend/app/api/: adversarial_review.py  analytics.py  claim_ledger.py  demo.py  document_sets.py  evals.py  health.py  pipeline_runs.py  primary_review.py  requirement_sets.py  review_pack.py  risk_fusion.py
backend/app/audit/: __init__.py  events.py
backend/app/core/: config.py  (+2 more)
backend/examples/: claim.json  document.json  document_chunk.json  document_set.json  evidence_item.json  model_run.json  requirement.json  requirement_set.json  review_decision.json  risk_finding.json
backend/tests/: test_adversarial_review.py  test_audit_trail.py  test_claim_ledger.py  test_completeness_check.py  test_config.py  test_demo_seed.py  test_document_ingestion.py  test_domain_schemas.py  test_eval_harness.py  test_evidence_verifier.py  test_false_positive_analytics.py  test_health.py  test_human_feedback_registry.py  test_llm_claim_extractor.py  test_ood_coverage_gates.py  test_persistent_repository.py  test_pipeline_runs.py  test_primary_review_orchestrator.py  test_prompt_templates.py  test_provider_adapters.py  test_regression_gate.py  test_requirement_library.py  test_review_calibration.py  test_review_pack.py  test_risk_fusion.py  test_security_tenant_isolation.py
(+253 files in other folders)
