[project]
name = "pharma-ai-risk-orchestration-backend"
version = "0.1.0"
description = "FastAPI backend skeleton for evidence-first pharmaceutical AI risk orchestration."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "psycopg[binary]>=3.2",
  "pypdf>=5.0",
  "pyyaml>=6.0",
  "python-multipart>=0.0.12",
  "redis>=5.1",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "reportlab>=4.2",
  "pytest>=8.3",
  "ruff>=0.6",
  "types-PyYAML>=6.0"
]

[build-system]
requires = ["setuptools>=74", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
